context/source-materials/legacy/changeswork-full/planning/mvp/versions/v6.2/tasks/mvp_tasks_deployment_detail_page.md
# Задачи для детальной страницы Внедрения (Deployment Detail)

## Обзор страницы

**Страница:** Детальная внедрения (Deployment Detail)
**Путь в макете:** Клик на внедрение из списка → детальная страница
**Статус:** Новая разработка

### Что показывает страница (из макета):

**Основная информация:**
- ID внедрения (display_id)
- Название
- Статус (draft/requires_approval/approved/deployed/rolled_back)
- Инициатива (initiative)
- Продукт
- Связанные скоркарты (многие-ко-многим)
- Критичность (автоматически рассчитывается как MAX критичности всех скоркарт)
- Даты (создания, одобрения, внедрения, отката)
- Автор

**Блоки:**
- **Блок артефактов** - список прикрепленных файлов (документы, результаты)
- **Блок связанных сущностей** - связи с Симуляциями и Пилотами (через Скоркарты)
- **Блок истории внедрений** - история deployed/rolled_back

**Функционал:**
- Просмотр всех полей внедрения
- Загрузка/удаление артефактов
- Просмотр связанных Симуляций (источники скоркарт)
- Просмотр связанных Пилотов (через общие скоркарты)
- Просмотр истории внедрений
- Переход к связанным сущностям (клик → детальная)
- Кнопки действий по жизненному циклу (если есть права)

**Права доступа:**
- ПРМ видит внедрения своего продукта
- Методолог видит все внедрения
- Админ видит все внедрения

---

## AN-CHD1: Аналитика детальной страницы Внедрения

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 5 дней

### Summary
Детализация требований для разработки детальной страницы Внедрения с артефактами, связанными сущностями и историей внедрений

### Description

Провести аналитику для разработки детальной страницы Внедрения:

1. **Детализация бизнес-требований:**
   - Определить правила отображения артефактов
   - Уточнить логику связей через Скоркарты
   - Определить правила доступа к артефактам
   - Уточнить отображение источников скоркарт (Симуляции, Пилоты)
   - Определить формат истории внедрений
   - Определить кнопки действий по жизненному циклу

2. **Спецификация UI/UX:**
   - Дизайн блока артефактов (список, загрузка, удаление)
   - Дизайн блока связанных сущностей (Симуляции, Пилоты)
   - Дизайн блока истории внедрений
   - Спецификация навигации к связанным сущностям
   - Дизайн кнопок действий (Отправить на согласование, Внедрить, Откатить)

3. **Спецификация API контракта:**
   - GET /api/deployments/{id}/ - детальная информация
   - GET /api/deployments/{id}/artifacts/ - список артефактов
   - POST /api/deployments/{id}/artifacts/ - загрузка артефакта
   - DELETE /api/deployments/{id}/artifacts/{artifact_id}/ - удаление артефакта
   - GET /api/deployments/{id}/related/ - связанные сущности
   - GET /api/deployments/{id}/deployment_history/ - история внедрений

### Acceptance Criteria

- [ ] Бизнес-требования задокументированы
- [ ] API контракт задокументирован
- [ ] UI/UX спецификация готова
- [ ] Правила доступа определены
- [ ] Формат истории внедрений определен
- [ ] Документ согласован с заказчиком

### Dependencies
Нет

### Deliverables
- Документ "Спецификация детальной страницы Внедрения" (markdown/confluence)
- API контракт для артефактов, связанных сущностей и истории

---

## BE-CHD1: Backend для детальной страницы Внедрения

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 5 дней

### Summary
Разработка Backend для детальной страницы Внедрения с артефактами, связанными сущностями и историей внедрений

### Description

Разработать Backend для детальной страницы Внедрения:

1. **API Endpoint: GET /api/deployments/{id}/**

   **Формат ответа:**
   ```json
   {
     "id": "uuid",
    "display_id": "DEP-001",
     "name": "Внедрение новой скоркарты Premium",
     "status": "deployed",
     "deployment": {
       "id": "uuid",
       "display_id": "DEP-001",
       "name": "Оптимизация риск-стратегии Premium карт"
     },
     "product": {
       "id": "uuid",
       "name": "Кредитная карта Premium"
     },
     "scorecards": [
       {
         "id": "uuid",
         "display_id": "SC-001",
         "name": "Скоркарта Premium v2.0",
         "criticality": "high"
       }
     ],
     "criticality": "high",
     "created_at": "2026-03-01T10:00:00Z",
     "approved_at": "2026-03-10T10:00:00Z",
     "deployed_at": "2026-03-15T10:00:00Z",
     "rolled_back_at": null,
     "created_by": {
       "id": "uuid",
       "full_name": "Иванов Иван Иванович"
     },
     "artifacts_count": 7,
     "related_simulations_count": 2,
     "related_pilots_count": 1
   }
   ```

2. **API Endpoint: GET /api/deployments/{id}/artifacts/**

   **Формат ответа:**
   ```json
   {
     "count": 7,
     "results": [
       {
         "id": "uuid",
         "filename": "deployment_documentation.pdf",
         "file_size": 3072000,
         "uploaded_at": "2026-03-15T15:00:00Z",
         "uploaded_by": {
           "id": "uuid",
           "full_name": "Иванов Иван Иванович"
         }
       }
     ]
   }
   ```

3. **API Endpoint: POST /api/deployments/{id}/artifacts/**

   **Параметры запроса:**
   - `file` (multipart/form-data) - файл для загрузки

   **Бизнес-логика:**
   - Валидация: размер файла <= 50MB
   - Валидация: разрешенные форматы (pdf, xlsx, docx, txt, csv)
   - Сохранение в файловое хранилище
   - Создание записи Artifact

4. **API Endpoint: DELETE /api/deployments/{id}/artifacts/{artifact_id}/**

   **Бизнес-логика:**
   - Валидация: пользователь имеет право удалять (автор или админ)
   - Удаление файла из хранилища
   - Удаление записи Artifact

5. **API Endpoint: GET /api/deployments/{id}/related/**

   **Формат ответа:**
   ```json
   {
     "simulations": [
       {
         "id": "uuid",
         "display_id": "SIM-001",
         "name": "Симуляция оптимизации лимитов",
         "status": "completed",
         "via_scorecards": [
           {
             "id": "uuid",
             "display_id": "SC-001",
             "name": "Скоркарта Premium v2.0"
           }
         ]
       }
     ],
     "pilots": [
       {
         "id": "uuid",
         "display_id": "PLT-001",
         "name": "Пилот Premium Q1 2026",
         "status": "completed",
         "via_scorecards": [
           {
             "id": "uuid",
             "display_id": "SC-001",
             "name": "Скоркарта Premium v2.0"
           }
         ]
       }
     ]
   }
   ```

6. **API Endpoint: GET /api/deployments/{id}/deployment_history/**

   **Формат ответа:**
   ```json
   {
     "count": 2,
     "results": [
       {
         "id": "uuid",
         "action": "deployed",
         "timestamp": "2026-03-15T10:00:00Z",
         "performed_by": {
           "id": "uuid",
           "full_name": "Иванов Иван Иванович"
         }
       },
       {
         "id": "uuid",
         "action": "rolled_back",
         "timestamp": "2026-03-20T15:00:00Z",
         "performed_by": {
           "id": "uuid",
           "full_name": "Петров Петр Петрович"
         },
         "reason": "Обнаружена критическая ошибка"
       }
     ]
   }
   ```

7. **Права доступа:**
   - Просмотреть может: ПРМ (свой продукт), Методолог, Админ
   - Загрузить артефакт может: ПРМ (свой продукт), Методолог, Админ
   - Удалить артефакт может: автор артефакта, Админ

### Acceptance Criteria

- [ ] GET /api/deployments/{id}/ реализован
- [ ] GET /api/deployments/{id}/artifacts/ реализован
- [ ] POST /api/deployments/{id}/artifacts/ реализован
- [ ] DELETE /api/deployments/{id}/artifacts/{artifact_id}/ реализован
- [ ] GET /api/deployments/{id}/related/ реализован
- [ ] GET /api/deployments/{id}/deployment_history/ реализован
- [ ] Валидация файлов работает
- [ ] Права доступа реализованы
- [ ] Unit тесты покрывают все сценарии (coverage > 80%)
- [ ] API документация обновлена

### Dependencies
- AN-CHD1 (требуется спецификация)

---

## FE-CHD1: Frontend для детальной страницы Внедрения

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 6 дней

### Summary
Разработка UI детальной страницы Внедрения с артефактами, связанными сущностями и историей внедрений

### Description

Разработать Frontend для детальной страницы Внедрения:

1. **Компонент DeploymentDetailView:**
   - Отображение основной информации изменения
   - Блок связанных скоркарт
   - Блок артефактов
   - Блок связанных сущностей
   - Блок истории внедрений
   - Кнопки действий по жизненному циклу
   - Responsive дизайн

2. **Основная информация:**
   - ID изменения (display_id)
   - Название
   - Статус (бейдж с цветом)
   - Внедрение (кликабельная ссылка)
   - Продукт
   - Критичность (бейдж, автоматически рассчитывается)
   - Даты (создания, одобрения, внедрения, отката)
   - Автор

3. **Блок связанных скоркарт:**
   - Заголовок "Скоркарты (N)"
   - Список скоркарт:
     - ID, название, критичность
     - Клик → переход к детальной скоркарты
   - EntityScorecardBlock компонент
   - Отображение критичности изменения = MAX(критичности скоркарт)

4. **Блок артефактов:**
   - Заголовок "Артефакты (N)"
   - Список файлов:
     - Иконка типа файла
     - Название файла (кликабельное для скачивания)
     - Размер файла
     - Дата загрузки
     - Автор загрузки
     - Кнопка "Удалить" (если есть права)
   - Кнопка "Загрузить файл" (если есть права)
   - Drag & drop зона для загрузки
   - Валидация: размер <= 50MB, форматы (pdf, xlsx, docx, txt, csv)
   - Progress bar при загрузке
   - Empty state если нет артефактов

5. **Блок связанных сущностей:**
   - Заголовок "Связанные сущности"
   - Секция "Симуляции (N)" - источники скоркарт:
     - Список симуляций
     - ID, название, статус
     - "через скоркарты: SC-001, SC-002"
     - Клик → переход к детальной симуляции
   - Секция "Пилоты (N)" - через общие скоркарты:
     - Список пилотов
     - ID, название, статус
     - "через скоркарты: SC-001, SC-002"
     - Клик → переход к детальной пилота
   - Empty state если нет связей

6. **Блок истории внедрений:**
   - Заголовок "История внедрений"
   - Timeline с событиями:
     - Дата и время
     - Действие (deployed/rolled_back)
     - Пользователь
     - Причина (для rolled_back)
   - Визуализация: вертикальная timeline с иконками
   - Empty state если нет истории

7. **Кнопки действий по жизненному циклу:**
   - "Отправить на согласование" (если status = requires_approval)
   - "Внедрить" (если status = approved)
   - "Откатить" (если status = deployed)
   - Видимость кнопок зависит от прав доступа

8. **Диалог загрузки файла:**
   - Drag & drop зона
   - Кнопка "Выбрать файл"
   - Отображение выбранного файла
   - Валидация формата и размера
   - Progress bar
   - Кнопки: "Отмена", "Загрузить"

9. **Диалог отката (Rollback):**
   - Поле ввода причины отката (обязательное)
   - Предупреждение о последствиях
   - Кнопки: "Отмена", "Откатить"

10. **Loading и Error состояния:**
    - Skeleton loader при загрузке
    - Error message при ошибке API
    - Toast уведомления при успешной загрузке/удалении

11. **API интеграция:**
    - DeploymentService.getDetail(id)
    - DeploymentService.getArtifacts(id)
    - DeploymentService.uploadArtifact(id, file)
    - DeploymentService.deleteArtifact(id, artifactId)
    - DeploymentService.getRelated(id)
    - DeploymentService.getDeploymentHistory(id)
    - Обработка ошибок (403, 404, 500)

### Acceptance Criteria

- [ ] DeploymentDetailView компонент реализован
- [ ] Основная информация отображается корректно
- [ ] Блок связанных скоркарт реализован
- [ ] EntityScorecardBlock отображается корректно
- [ ] Критичность изменения рассчитывается и отображается
- [ ] Блок артефактов реализован
- [ ] Загрузка файлов работает (drag & drop + кнопка)
- [ ] Валидация файлов работает
- [ ] Progress bar отображается при загрузке
- [ ] Удаление файлов работает
- [ ] Блок связанных сущностей реализован
- [ ] Навигация к связанным сущностям работает
- [ ] Отображение "через скоркарты" работает
- [ ] Блок истории внедрений реализован
- [ ] Timeline визуализация работает
- [ ] Кнопки действий по жизненному циклу отображаются
- [ ] Диалог отката реализован
- [ ] Loading состояние (skeleton) работает
- [ ] Error состояние отображается
- [ ] Empty states отображаются
- [ ] Responsive дизайн работает
- [ ] API интеграция работает корректно
- [ ] Обработка ошибок реализована
- [ ] Unit тесты для компонента (coverage > 70%)

### Dependencies
- AN-CHD1 (требуется UI спецификация)
- BE-CHD1 (требуется готовый API endpoint)

---

## Итоговая зависимость задач

```
AN-CHD1 (2 дня)
  ↓
BE-CHD1 (4 дня)
  ↓
FE-CHD1 (6 дней)
```

**Общая длительность (критический путь):** 12 дней

**Параллельная работа:**
- BE-CHD1 может начаться сразу после AN-CHD1
- FE-CHD1 может начаться только после готовности BE-CHD1

---

## ✅ Ключевые особенности страницы

1. **Новая разработка** - полностью новая страница
2. **Блок связанных скоркарт** - многие-ко-многим связь
3. **Автоматический расчет критичности** - MAX критичности всех скоркарт
4. **Блок артефактов** - загрузка/удаление файлов с drag & drop
5. **Блок связанных сущностей** - отображение связей через Скоркарты
6. **Блок истории внедрений** - timeline с deployed/rolled_back событиями
7. **Навигация к связанным сущностям** - клик → детальная страница
8. **Кнопки действий по жизненному циклу** - зависят от статуса
9. **Диалог отката** - с обязательной причиной
10. **Валидация файлов** - размер и формат
11. **Progress bar** - визуализация загрузки
12. **Empty states** - для артефактов, связей и истории
13. **Права доступа** - ПРМ (свой продукт), Методолог, Админ
14. **Responsive дизайн** - адаптация под разные разрешения

---
